Changes for 1.1.3:

 - introduced secure strcat and strcpy: zbx_strlcat, zbx_strlcpy (Alexei)
 - better format for Queue report (Alexei) 
 - fixed perofmance problem in Status of Triggers (Alexei)
 - history stats removed from Status of ZABBIX report (Alexei)
 - fixed assignment of default listen port for Win agent (Eugene)
 - changed return value for 'net.tcp.port[]' of Win agent (Eugene)
 - added images for postgres (Eugene)
 - fixed reversed icons on maps (Eugene)
 - fixed trigger description substitution in action comporation (Eugene) 
 - fixed trigger description substitution in message subject and body (Eugene) 
 
Changes for 1.1.2:

 - fixed storage and calculation of i64 values (Eugene) 
 - added color selection for trigger severity 'warning' and 'information' (Eugene)
 - fixed limitation of return value for 'net.if.*' (Eugene)
 - fixed limitation of return value for 'vfs.dev.*' (Eugene)
 - fixed limitation of return value for 'system.cpu.intr' (Eugene)
 - fixed autoregistration in oracle system (Eugene)
 - fixed support of PostgreSQL (Eugene)
 - improved macro variables substitution in message body/subject (Eugene)
 - added new value for 'net.tcp.service*[]', 2 - timeout (Eugene)
 - fixed order of displaying log files (Eugene)
 - added support of 'pfree' and 'pused' for 'vfs.fs.size' of windows (Eugene)
 - added support of '<=' for trigger severity of action conditions (Eugene)
 - fixed problem escaping characters in triggers (Eugene)
 - fixed 'system.cpu.util[*]' for Tru64 (Eugene)
 - disabled exit code handling of UserParameter scripts (Eugene)
 - improved UserParameter substitution (Eugene)
 - improved definition of integer and float point types (Eugene)
 - fixed problem with ASN_IPADDRESS SNMP values (Eugene)
 - added action email action variable '{TRIGGER.SEVERITY}' (Eugene)
 - added Brazilian Portuguese translation. Thanks to Marcelo Honorio. (Alexei)
 - fixed history cleaning (Eugene)