@@ -73,7 +73,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 	{
 		snprintf(error,MAX_STRING_LEN-1,"Error in get_value_SNMP. Wrong item type [%d]. Must be SNMP.", item->type);
 
-		zabbix_log( LOG_LEVEL_ERR, error);
+		zabbix_log( LOG_LEVEL_ERR, "%s", error);
 		SET_MSG_RESULT(value, strdup(error));
 
 		return FAIL;
@@ -138,7 +138,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 			{
 				snprintf(error,MAX_STRING_LEN-1,"Error generating Ku from authentication pass phrase.");
 
-				zabbix_log( LOG_LEVEL_ERR, error);
+				zabbix_log( LOG_LEVEL_ERR, "%s", error);
 				SET_MSG_RESULT(value, strdup(error));
 
 				return FAIL;
@@ -161,7 +161,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 			{
 				snprintf(error,MAX_STRING_LEN-1,"Error generating Ku from authentication pass phrase.");
 
-				zabbix_log( LOG_LEVEL_ERR, error);
+				zabbix_log( LOG_LEVEL_ERR, "%s", error);
 				SET_MSG_RESULT(value, strdup(error));
 
 				return FAIL;
@@ -180,7 +180,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 			{
 				snprintf(error,MAX_STRING_LEN-1,"Error generating Ku from priv pass phrase.");
 
-				zabbix_log( LOG_LEVEL_ERR, error);
+				zabbix_log( LOG_LEVEL_ERR, "%s", error);
 				SET_MSG_RESULT(value, strdup(error));
 
 				return FAIL;
@@ -191,7 +191,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 	else
 	{
 		snprintf(error,MAX_STRING_LEN-1,"Error in get_value_SNMP. Unsupported session.version [%d]",(int)session.version);
-		zabbix_log( LOG_LEVEL_ERR, error);
+		zabbix_log( LOG_LEVEL_ERR, "%s", error);
 		SET_MSG_RESULT(value, strdup(error));
 		
 		return FAIL;
@@ -207,7 +207,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 		SOCK_CLEANUP;
 
 		snprintf(error,MAX_STRING_LEN-1,"Error doing snmp_open()");
-		zabbix_log( LOG_LEVEL_ERR, error);
+		zabbix_log( LOG_LEVEL_ERR, "%s", error);
 		SET_MSG_RESULT(value, strdup(error));
 
 		return FAIL;
@@ -323,14 +323,14 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 					else
 					{
 						snprintf(error,MAX_STRING_LEN-1,"Cannot allocate required memory");
-						zabbix_log( LOG_LEVEL_ERR, error);
+						zabbix_log( LOG_LEVEL_ERR, "%s", error);
 						SET_MSG_RESULT(value, strdup(error));
 					}
 				}
 				else if(item->value_type != ITEM_VALUE_TYPE_STR)
 				{
 					snprintf(error,MAX_STRING_LEN-1,"Cannot store SNMP string value (ASN_OCTET_STR) in item having numeric type");
-					zabbix_log( LOG_LEVEL_ERR, error);
+					zabbix_log( LOG_LEVEL_ERR, "%s", error);
 					SET_MSG_RESULT(value, strdup(error));
 
 					ret = NOTSUPPORTED;
@@ -348,7 +348,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 					else
 					{
 						snprintf(error,MAX_STRING_LEN-1,"Cannot allocate required memory");
-						zabbix_log( LOG_LEVEL_ERR, error);
+						zabbix_log( LOG_LEVEL_ERR, "%s", error);
 						SET_MSG_RESULT(value, strdup(error));
 					}
 				}
@@ -364,7 +364,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 				if(item->value_type != ITEM_VALUE_TYPE_STR)
 				{
 					snprintf(error,MAX_STRING_LEN-1,"Cannot store SNMP string value (ASN_IPADDRESS) in item having numeric type");
-					zabbix_log( LOG_LEVEL_ERR, error);
+					zabbix_log( LOG_LEVEL_ERR, "%s", error);
 					SET_MSG_RESULT(value, strdup(error));
 					ret = NOTSUPPORTED;
 				}
@@ -381,7 +381,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 					else
 					{
 						snprintf(error,MAX_STRING_LEN-1,"Cannot allocate required memory");
-						zabbix_log( LOG_LEVEL_ERR, error);
+						zabbix_log( LOG_LEVEL_ERR, "%s", error);
 						SET_MSG_RESULT(value, strdup(error));
 					}
 				}
@@ -393,7 +393,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 
 				snprintf(error,MAX_STRING_LEN-1,"OID [%s] value #%d has unknow type [%X]",item->snmp_oid, count,vars->type);
 
-				zabbix_log( LOG_LEVEL_ERR, error);
+				zabbix_log( LOG_LEVEL_ERR, "%s", error);
 				SET_MSG_RESULT(value, strdup(error));
 
 				ret  = NOTSUPPORTED;
@@ -410,7 +410,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 			{
 				snprintf(error,MAX_STRING_LEN-1,"SNMP error [%s]", snmp_errstring(response->errstat));
 
-				zabbix_log( LOG_LEVEL_ERR, error);
+				zabbix_log( LOG_LEVEL_ERR, "%s", error);
 				SET_MSG_RESULT(value, strdup(error));
 
 				ret=NOTSUPPORTED;
@@ -419,7 +419,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 			{
 				snprintf(error,MAX_STRING_LEN-1,"SNMP error [%s]", snmp_errstring(response->errstat));
 
-				zabbix_log( LOG_LEVEL_ERR, error);
+				zabbix_log( LOG_LEVEL_ERR, "%s", error);
 				SET_MSG_RESULT(value, strdup(error));
 
 				ret=FAIL;
@@ -430,7 +430,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 			snprintf(error,MAX_STRING_LEN-1,"Timeout while connecting to [%s]",session.peername);
 
 /*			snmp_sess_perror("snmpget", ss);*/
-			zabbix_log( LOG_LEVEL_ERR, error);
+			zabbix_log( LOG_LEVEL_ERR, "%s", error);
 			SET_MSG_RESULT(value, strdup(error));
 
 			ret = NETWORK_ERROR;
@@ -439,7 +439,7 @@ int	get_value_snmp(DB_ITEM *item, AGENT_RESULT *value)
 		{
 			snprintf(error,MAX_STRING_LEN-1,"SNMP error [%d]",status);
 
-			zabbix_log( LOG_LEVEL_ERR, error);
+			zabbix_log( LOG_LEVEL_ERR, "%s", error);
 			SET_MSG_RESULT(value, strdup(error));
 
 			ret=FAIL;
